<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HmiMiddle" Id="{90f9ad0f-8bc3-4e17-a23d-018931ac9453}">
    <Declaration><![CDATA[TYPE ST_HmiMiddle :
STRUCT CONSTANT 
	
	//--------------------------------//
	//General Pages
	Start								: STRING 	:= 'Middle/Start.Content';
	TesterConfig						: STRING	:= 'Middle/TesterConfig.Content';
	PPLSelection						: STRING	:= 'Middle/PPLSelection.Content';
	AlarmManager						: STRING	:= 'Middle/AlarmManager.Content';
	Procedures							: STRING	:= 'Middle/Procedures.Content';
	ProcedureStart						: STRING	:= 'Middle/ProceduresStart.Content';
	ProceduresCalibration				: STRING	:= 'Middle/ProceduresCalibration.Content';
	Manual								: STRING	:= 'Middle/Manual.Content';
	//--------------------------------//
	
	//--------------------------------//
	//MagneticTest
	OperatorInputData					: STRING	:= 'Middle/MagneticTest/OperatorInputData.Content';
	OperatorPrepareTester				: STRING	:= 'Middle/MagneticTest/OperatorPrepareTester.Content';
	ProcedureTesting					: STRING	:= 'Middle/MagneticTest/ProcedureTesting.Content';
	OperatorDisconnect					: STRING	:= 'Middle/MagneticTest/OperatorDisconnect.Content';
	OperatorMoveDown					: STRING	:= 'Middle/MagneticTest/OperatorMoveDown.Content';
	//--------------------------------//
	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>