<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_TestMode" Id="{25042758-2f9a-4a20-902f-6fad2fef3261}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_TestMode :
(
	IDLE 			:= 0,
	Magnetic		:= 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>